Fix logo wrong height
Fixes #255

--- a/templates/simple/src/styles.css
+++ b/templates/simple/src/styles.css
@@ -404,8 +404,8 @@ header {
 }
 
 .branding .logo img {
-  width: 100%;
-  height: auto;
+  width: auto;
+  height: 100%;
 }
 
 .branding .name {
